--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -19,6 +19,7 @@
         </div>
         <div class="col-4">
             <a href="/login">Login</a>
+            <a href="/register">Register</a>
         </div>
     </div>
 
