Fix major problem

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,7 @@
               <a class="nav-link" href="/products">Product</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/brand">Brand</a>
+              <a class="nav-link" href="/companies">Company</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/logout">Logout</a>
@@ -28,4 +28,4 @@
         </div>
     </nav> 
 
-    <h1><%= title %></h1>
+    <h1 class="mt-3"><%= title %></h1>
