--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -13,7 +13,7 @@
     <div class="row" id="navbar">
         <div class="col-6">
             <form action="/subjects/filter" method="POST">
-                <input type="text" placeholder="Brand" name="brand">
+                <input type="text" placeholder="company" name="company">
                 <input type="submit" value="Find">
             </form>
         </div>
@@ -35,7 +35,7 @@
         <tr>
             <td><%= data[i].name %></td>
             <td><%= data[i].price %></td>
-            <td><a href="/productbrands/<%= data[i].id %>/detail">Know More</a></td>
+            <td><a href="/productcompanies/<%= data[i].id %>/detail">Know More</a></td>
         </tr>
         <% } %>
     </table>
