Done with the combine table last user-session

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -12,10 +12,7 @@
     
     <div class="row" id="navbar">
         <div class="col-6">
-            <form action="/subjects/filter" method="POST">
-                <input type="text" placeholder="company" name="company">
-                <input type="submit" value="Find">
-            </form>
+            <a href="/">Home</a>
         </div>
         <div class="col-4">
             <a href="/login">Login</a>
