--- a/views/detailProduct.ejs
+++ b/views/detailProduct.ejs
@@ -12,10 +12,9 @@
     
     <div class="row" id="navbar">
         <div class="col-6">
-            <form action="/company/filter" method="POST">
-                <input type="text" placeholder="Brand" name="brand">
-                <input type="submit" value="Find">
-            </form>
+            <div class="col-6">
+                <a href="/">Home</a>
+            </div>
         </div>
         <div class="col-4">
             <a href="/login">Login</a>
@@ -26,16 +25,15 @@
     <h1><%= data.name %></h1>
     
     <div class="row">
-        <% for(let i = 0; i < allCompany.length; i++) { %>
-            <% if (allCompany[i].id === data.ProductCompanies.companyId) { %>
+        <% for(let i = 0; i < data.ProductCompanies.length; i++) { %>
                 <div class="col-6 mt-4">
                     <p>Store</p><br>
-                    <p><%= allCompany[i].store.toUpperCase() %></p><br>
+                    <p><%= data.ProductCompanies[i].Company.store.toUpperCase() %></p><br>
                 </div>
                 <div class="col-6 mt-4">
                         <div class="mapouter">
                             <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" 
-                                src="https://maps.google.com/maps?q=<%= urlFormat(allCompany[i].store) %>&t=&z=13&ie=UTF8&iwloc=&output=embed" 
+                                src="https://maps.google.com/maps?q=<%= urlFormat(data.ProductCompanies[i].Company.store) %>&t=&z=13&ie=UTF8&iwloc=&output=embed" 
                                 frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com/divi-discount/"></a>
                             </div>
                             <style>
@@ -43,7 +41,6 @@
                             </style>
                         </div>
                 </div>
-            <% } %>
         <% } %>
     </div>
 
