--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,26 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../index.css">
-    <title>Ecommerce Inventory</title>
-</head>
-<body>
-    
-    <div class="row" id="navbar">
-        <div class="col-6">
-            <a href="/">Home</a>
-        </div>
-        <div class="col-4">
-            <a href="/login">Login</a>
-            <a href="/register">Register</a>
-        </div>
-    </div>
-
-    <h1>LIST OF PRODUCT</h1>
+<%- include('partials/header', {title: "LIST OF PRODUCT"}) %>
 
     <table>
         <tr>
@@ -31,7 +9,7 @@
         <% for (let i = 0; i < data.length; i++){ %>
         <tr>
             <td><%= data[i].name %></td>
-            <td><%= data[i].price %></td>
+            <td>Rp <%= priceSeparator(data[i].price) %></td>
             <td><a href="/productcompanies/<%= data[i].id %>/detail">Know More</a></td>
         </tr>
         <% } %>
