--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,20 +11,26 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/products">Product</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/companies">Company</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/logout">Logout</a>
-            </li>
-          </ul>
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/products">Product</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/companies">Company</a>
+                </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/login">Login</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/register">Register</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/logout">Logout</a>
+                  </li>
+               </ul>
         </div>
     </nav> 
 
