Fix error in password and fix stock conditional

--- a/views/company.ejs
+++ b/views/company.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header', {title: "List of Company List"}) %>
+<%- include('partials/header', {title: "List of Company"}) %>
 
     <button><a href="/companies/add">Add Company</a></button><br>
 
