--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
         <label>Username</label><br>
         <input type="text" name="username"><br><br>
         <label>Password</label><br>
-        <input type="text" name="password"><br><br>
+        <input type="password" name="password"><br><br>
         <input type="submit" value="Login">
     </form>
 
