--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,3 @@
-<p>Created by Kisra and Eldwin as Fina Project for phase 1</p>
+<p>Created by Kisra and Eldwin as Final Project For Phase 1 @hacktiv8</p>
 </body>
 </html>
