--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,9 +8,9 @@
         <label>Username</label><br>
         <input type="text" name="username"><br><br>
         <label>Password</label><br>
-        <input type="text" name="password"><br><br>
+        <input type="password" name="password"><br><br>
         <label>Confirmation Password</label><br>
-        <input type="text" name="confirmation_password"><br><br>
+        <input type="password" name="confirmation_password"><br><br>
         <input type="submit" value="Register">
     </form>
 
